package com.inf.ufg.chamaAi.enums;

public enum Especializacao {
    ENCANADOR,
    ELETRICISTA,
    PEDREIRO,
    PAISAGISTA,
    MECANICO,
    BORRACHEIRO
}
