package com.inf.ufg.chamaAi.enums;

public enum Status {
    CANCELADO_PELO_CONTRATANTE,
    CANCELADO_PELO_PRESTADOR,
    AGUARDANDO,
    EM_ANDAMENTO,
    FINALIZADO;
}
